feat: add endpoint for 1 entry

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,6 @@
 OPENAI_API_KEY=
 TIDB_DATABASE_URL=
+LLM_MODEL=gpt-4o-mini
+DEFAULT_LLM_TEMPERATURE=0.2
+MAX_TOKENS=2000
+EMBEDDINGS_MODEL=text-embedding-3-small
